# logroll

./: .gitignore  .windsurfrules  Cargo.toml  README.md  docker-compose.yml  insert.sh  reset.sh  run.sh
postgres/: g1.sql  generate.sql  mini_gen.sql  mini_table.sql  postgresql.conf  reset.sql  table.sql
src/: config.rs  error.rs  lib.rs  main.rs  message.rs  models.rs  processor.rs  replication.rs
