[package]
name = "logroll-cdc"
version = "0.1.0"
edition = "2021"
description = "A tool to read PostgreSQL CDC changes and log them to stdout"

[dependencies]
# PostgreSQL dependencies
tokio-postgres = { version = "0.7.11", features = [
    "with-serde_json-1",
    "with-uuid-1",
], git = "https://github.com/MaterializeInc/rust-postgres/" }
postgres-native-tls = "0.5.1"
postgres-protocol = { git = "https://github.com/MaterializeInc/rust-postgres/", version = "0.6.7" }
postgres-replication = { git = "https://github.com/MaterializeInc/rust-postgres/", version = "0.6.7" }
postgres-types = "0.2.9"
byteorder = "1.5.0"
native-tls = "0.2.14"
bytes = "1.5.0"

# Async runtime
tokio = { version = "1.44.2", features = ["full"] }

# Logging and metrics
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "json",
    "time",
    "local-time",
] }
tracing-appender = "0.2.3"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.0"

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.12"

# Configuration and utilities
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.37", features = ["env", "derive"] }
futures = "0.3.31"
ctrlc = "3.4.6"
backoff = { version = "0.4.0", features = ["tokio"] }
chrono = "0.4.41"
once_cell = "1.21.3"
prometheus = "0.13"
md5 = "0.7.0"

[dev-dependencies]
tokio = { version = "1.44.2", features = ["full", "test-util"] }
